# YourRepo

./: .gitignore  CMakeLists.txt  README.md  README_TEMPLATE.md  README_TEMPLATE_APPLICATION.md  README_TEMPLATE_LIBRARY.md
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
data/: two.txt
include/MathUtils/: DotProduct.hpp
include/YourRepo/: DotProduct.hpp
src/: CMakeLists.txt  main.cpp
src/CMakeExample/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/MathUtils/: CMakeLists.txt  DotProduct.cpp
src/YourRepo/: CMakeLists.txt  DotProduct.cpp
tests/: CMakeLists.txt
tests/MathUtils/: CMakeLists.txt  DotProduct.test.cpp  MathUtils.test.cpp
tests/MathUtils-bin/: CMakeLists.txt
tests/YourRepo/: CMakeLists.txt  DotProduct.test.cpp
tests/YourRepo-bin/: CMakeLists.txt
